# mesh-organiser

./: .dockerignore  .gitignore  Dockerfile  README.md  build-web-musl.sh  build-web-svelte.bat  build-web.sh  demo.bat  force-vs2022.bat  package.json  pnpm-lock.yaml  start-web.sh  vite.config.js  web.bat
.github/workflows/: docker-dev.yml  docker-release.yml  force-build.yml  release.yml  web-demo.yml
db/: .env  .gitignore  Cargo.toml  model.sqlite
db/migrations/: 20250426102009_add_sublabels.sql  20250530150713_add_resources_table.sql  20251027162513_multi_user.sql  20251206000641_blob_via_file_path.sql
db/src/: audit_db.rs  blob_db.rs  blobs_db.rs  db_context.rs  group_db.rs  label_db.rs  label_keyword_db.rs  lib.rs  model_db.rs  paginated_response.rs  resource_db.rs  share_db.rs  user_db.rs  util.rs
db/src/model/: audit.rs  blob.rs  label.rs  label_keyword.rs  mod.rs  model.rs  model_group.rs  resource.rs  share.rs  user.rs
service/: Cargo.toml
service/src/: app_state.rs  configuration.rs  download_file_service.rs  export_service.rs  import_service.rs  import_state.rs  lib.rs  resource_service.rs  service_error.rs  threemf_service.rs  thumbnail_service.rs  util.rs
service/src/slicer_service/: base.rs  linux.rs  macos.rs  mod.rs  win.rs
src/: app.css  app.html  state.svelte.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0591038c30cc1561ba411643062ff65e49fdb63e3a0d2b33f51da7dafe6d91a5.json  query-10dd6644642d6bf3dd69129e91337229ecdb94a5c9c154a3bf90c8062f7c9586.json  query-164e534e4d522846a4db493e365ddc81edc0b51f5f9caa9b0899d7d71ba38bdc.json  query-1d5512437c590fbb6b927962a1f5ed44c7a6c4b0afa94d02c45a49f40bb63a99.json  query-1ecb62633e2291c9b8633c201806558a3f57c6578248810997fc939417526ed2.json  query-233cdc860488c7c8af2705f268ff28ed5792f6818ece12ae305f50704e422470.json  query-25c3b5d8e36a06e633665f5235985ed102f832b9866456aa7f4620378f3c26d4.json  query-2b05b2752df5ddcbdddff302a671b3419547f57bc644f21b7ae6539bd13693f5.json  query-34a8ba23e4eee5890adc343f9a9ef5e0573a8b030280bc22714a70fb719b9477.json  query-3adec31ffae72a05be5707006fca6e1e4293a92a6c0ebaf55ee37e2f16cc272e.json  query-45349d02a9a84638ab5675a187951bbd200f1272992758f0bc61ae06a1d7f9f0.json  query-46dd5feba2c4ee1425f3faa2fea0315c2f2b82f756585067b0fd5da3d529fe8c.json  query-5cb532d7139a85e77065707c7ddbd4b4dc0f738e72080329df18638aa7f0f944.json  query-6692907e93c7785d5fe650ccb161e97f6e1724e5efa88aa9273505041dedfc32.json  query-6c24a1620f29a6bac356a7c833c3eeb6a9413d7d335f043f83b97ad21a9882a3.json  query-6d1647ecd0971660a9413da6c7aec50fbbc8317b1089127e440622ba049fd227.json  query-83f433ef0195bdeee71b200ac3c6a3fab1f9dc5a5c28b725d722bdcebed18479.json  query-899e9ff1391ba281e4919ff3fee94f654ebe0b701c51e98c230307809553250e.json  query-8ab5a02d639cd511e149f16022bdbf4b03bb2b667d09cc07926752269f3103ac.json  query-8afd3f739e4e8c0ccfd0c4eaa95c72a481f9bf68cdd77f797055b55001fea5e3.json  query-905c3c486c3e6d083930bac421838818e93751329a58361b39ae3667883942a6.json  query-90674f4eafd622e1579c3974e4386b9d28257956929cf91dd736fcdc13c15f3e.json  query-96ef3f9a62c55f791bdebf9d53662f4768eef9171fb81f60be1f93bd0bfb16c4.json  query-ad3eae4b7eef3aa48195b8a919856ead1af5ed682472ea4df8bd0453781a09ca.json  query-aeeb7f1ecea4230ec629f52bd902cc6af71dc7fa131117a622091829b93185fb.json  query-b495df336fb33d8292fdb6aba3e57b1339f1f19efe305d22c7422652d983eea5.json  query-b60b62dfaecb25749a90ad2f3a693ac57a42d296afc36c7651f9ac2fff95ea90.json  query-c54b8a7b514a38d9067ff0e10b9f4ebb8390790f5fd3fa317c63ec6357e1705a.json  query-c70b2f45551841a096f4b71f4d7af76eef1ee5f226306e02c6ce81c70f43e49d.json  query-d7bff9406a9259ee4c8bb10c49ffc7a749c72323506c3feb9138e6c2c4b081ac.json  query-e1198d6a751df2045f1b65480e3edf2eb3957d91038e8601e23ab3f6d9916cf7.json  query-e217ea2c6b41f39145d9a0bc9699db88a719d29b2589840f9e9ae727162868b1.json  query-e99d901c29ff31c86b07708204daff77eb9b8f0aa4eae9df3cacd7ae3a74f82b.json  query-e9d898d3fe3f4c77cd5985ce75bd00327564efaebaba357e2d2829c81f199577.json  query-ea5b4ea9cde0f07ef1c6d96b5ccd10e8381d60c4deb85b7c9d92a4f827ad4791.json  query-ea9ccd22097d476d8e3c32a2460505f3b78072f378bb1b98f689721916b5a14a.json  query-eca17efb670c968e6358f64f3d24dc69d870426abf5f56c32202c11773ec050d.json  query-f0480b9524719afdcc27d4694c07bf69f5724b6958c7d9cdaced533380cf89b6.json  query-f161afe969690a8ab6dab045162de2b21e17f0161e23b4d7f089008995d660c5.json  query-f5656310dbd726f0c2696f3cc7470cfd589990dc9af94a3381e3541e42e30dba.json  (+3 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250317142939_create_initial_tables.sql  20250406152932_add_flags_to_model.sql  20250814174529_add_keywords_to_labels.sql
src-tauri/src/: configuration.rs  error.rs  inject.js  lib.rs  main.rs  tauri_app_state.rs  tauri_import_state.rs  tauri_thumbnail_service.rs  util.rs  web_server.rs
src-tauri/src/api/: blob_api.rs  group_api.rs  label_api.rs  mod.rs  model_api.rs  resource_api.rs  user_api.rs  web_extensions_api.rs
src-tauri/src/db/: db.rs  label.rs  label_keywords.rs  mod.rs  model.rs  model_group.rs  resource.rs
src-tauri/src/service/: app_state.rs  download_file_service.rs  export_service.rs  import_service.rs  import_state.rs  mod.rs  model_service.rs  resource_service.rs  slicer_service.rs  thumbnail_service.rs
src-tauri/src/service/slicer_service/: base.rs  linux.rs  macos.rs  mod.rs  win.rs
src/lib/: account_link_data.svelte.ts  configuration.svelte.ts  data.svelte.ts  drag-selected-models.svelte.ts  glyph.ts  import.svelte.ts  model.ts  sidebar_data.svelte.ts  sync.svelte.ts  tauri.ts  theme.ts  update_data.svelte.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
web/: Cargo.toml  README.md  env.bat  web.bat
web/src/: app.rs  error.rs  main.rs  user.rs  web_app_state.rs  web_import_state.rs  web_thumbnail_service.rs
web/src/controller/: auth.rs  auth_controller.rs  blob.rs  blob_controller.rs  group_controller.rs  label_controller.rs  mod.rs  model.rs  model_controller.rs  page_controller.rs  resource_controller.rs  share_controller.rs  threemf_controller.rs  user_controller.rs
(+203 files in other folders)
