[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async_zip = { version = "0.0.17", features = ["full"] }
reqwest = "0"
strum = { version = "0", features = ["derive"] }
regex = "1"
indexmap = "2"
itertools = "0"
sha2 = "0"
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0", features = ["io"] }
futures = { version = "0.3" }
chrono = "0"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0"