[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64", "tokio-fs"] }
reqwest = "0"
strum = { version = "0", features = ["derive"] }
regex = "1"
indexmap = "2"
itertools = "0"
sha2 = "0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = { version = "0", features = ["io"] }
chrono = "0"
urlencoding = "2"
stl_io = "0"
threemf = { git = "https://github.com/suchmememanyskill/3mf-rs", rev = "d78e731b2fcf127692380332ad2708aec65dee68" }
image = { version = "0", features = ["png", "jpeg"] }
libmeshthumbnail = { git = "https://github.com/suchmememanyskill/mesh-thumbnail", rev = "26b24bcb8ca243eb5e8ea3d179696bd29ad5e981", features = ["step"] }
vek = "0"
content_disposition = "0.4.0"
futures = "0"

[target.'cfg(windows)'.dependencies]
winreg = "0"