[package]
name = "mesh-organiser"
version = "1.0.0"
description = "Organise your 3d models"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mesh_organiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
futures = "0.3.31"
sha2 = "0.10"
thiserror = "2.0.12"
chrono = "0.4.40"
zip = { version = "2.2"}
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
urlencoding = "2"
reqwest = "0.12"
regex = "1.11.1"
strum = { version = "0.27", features = ["derive"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2.0.0"
tokio = { version = "1.44.1", features = ["full"] }
bitflags = { version = "2.9.0" }
arboard = "3.5"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
