[package]
name = "mesh-organiser"
version = "1.7.0"
description = "Organise your 3d models"
authors = ["suchmememanyskill"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mesh_organiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0"
sha2 = "0"
thiserror = "2"
chrono = "0"
zip = { version = "6"}
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
urlencoding = "2"
regex = "1"
strum = { version = "0", features = ["derive"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["io"] }
bitflags = { version = "2" }
arboard = "3"
base64 = "0"
indexmap = "2"
itertools = "0"
tauri-plugin-fs = { version = "2", features= ["watch"] }
rayon = "1"
tauri-plugin-os = "2"
db = { path = "../db" }
service = { path = "../service" }
serde_html_form = "0"
tauri-plugin-http = { version = "2", features = [ "multipart" ] }
content_disposition = "0.4.0"
async_zip = { version = "0.0.18", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winreg = "0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.release]
strip = true
lto = true
