[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0", features = ["io"] }
axum-login = "0"
password-auth = "1"
db = { path = "../db" }
service = { path = "../service" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-messages = "0"
time = "0.3"
tower = "0"
tower-http = { version = "0", features = ["fs"] }
tower-sessions = { version = "0", default-features = false, features = ["signed"] }
tower-sessions-sqlx-store = { version = "0", features = ["sqlite"] }
async_zip = { version = "0.0.17", features = ["full"] }

[patch.crates-io]
sqlx = { git = "https://github.com/suchmememanyskill/sqlx", features = ["sqlite", "runtime-tokio", "chrono"] }